CICD/dev/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-tool-api-deployment
  namespace: finance-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-tool-api
  template:
    metadata:
      labels:
        app: finance-tool-api
    spec:
      containers:
        - name: finance-tool-api
          image: finance-tool:0.0.5-SNAPSHOT
          resources:
            limits:
              memory: "1Gi"
            requests:
              memory: "500Mi"
          ports:
            - name: httpport
              containerPort: 8080
          volumeMounts:
            - name: finance-tool-api-volume
              mountPath: /var/lib/finance-tool/
              subPath: initData
      volumes:
        - name: finance-tool-api-volume
          persistentVolumeClaim:
            claimName: finance-tool-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: finance-tool-api-service
  namespace: finance-tool
spec:
  selector:
    app: finance-tool-api
  type: NodePort
  ports:
    - name: httpport
      port: 80
      targetPort: 8080
