CICD/dev/grafana-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-tool-grafana-deployment
  namespace: finance-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-tool-grafana
  template:
    metadata:
      labels:
        app: finance-tool-grafana
    spec:
      containers:
        - name: finance-tool-grafana
          image: finance-tool-grafana:0.0.2-SNAPSHOT
          ports:
            - name: httpport
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: finance-tool-grafana-service
  namespace: finance-tool
spec:
  selector:
    app: finance-tool-grafana
  type: NodePort
  ports:
    - name: httpport
      port: 3000
      nodePort: 80
