CICD/dev/web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-tool-web-deployment
  namespace: finance-tool
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-tool-web
  template:
    metadata:
      labels:
        app: finance-tool-web
    spec:
      containers:
        - name: finance-tool-web
          image: finance-tool-web:0.0.5-SNAPSHOT
---
apiVersion: v1
kind: Service
metadata:
  name: finance-tool-web-service
  namespace: finance-tool
spec:
  selector:
    app: finance-tool-web
  type: NodePort
  ports:
    - name: httpport
      port: 80
      targetPort: 80
