CICD/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finance-tool-ingress
  namespace: finance-tool
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: finance-tool-api-service
              port:
                number: 80
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: finance-tool-grafana-service
              port:
                number: 80
        - path: /web
          pathType: Prefix
          backend:
            service:
              name: finance-tool-web-service
              port:
                number: 80
